<resources>
    <string name="app_name">營養諮詢</string>
    <string name="login_account">帳號</string>
    <string name="account_hint">cych@ccu.edu.tw</string>
    <string name="login_passwd">密碼</string>
    <string name="login_button">登入</string>
    <string name="age_label">年齡</string>
    <string name="age_hint">(歲)</string>
    <string name="height_label">身高</string>
    <string name="height_hint">(cm)</string>
    <string name="weight_label">體重</string>
    <string name="weight_hint">(kg)</string>
    <string name="gender_label">性別</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="PA_label">活動量</string>
    <string name="PA_low">低</string>
    <string name="PA_batter_low">稍低</string>
    <string name="PA_appropriate">適度</string>
    <string name="PA_height">高</string>
    <string name="disease_label">痼疾</string>
    <string name="disease_0">糖尿病</string>
    <string name="disease_1">腎臟病</string>
    <string name="disease_2">高血脂</string>
    <string name="next_page">下一頁</string>
    <string name="breakfast_label">早餐</string>
    <string name="lunch_label">午餐</string>
    <string name="dinner_label">晚餐</string>
    <string name="snack_label">點心</string>
    <string name="grainLabel">全榖雜糧</string>
    <string name="meatLabel">豆魚蛋肉</string>
    <string name="vegetableLabel">蔬菜</string>
    <string name="milkLabel">乳品</string>
    <string name="fatLabel">油脂與堅果種子</string>
    <string name="fruitLabel">水果</string>
    <string name="snackLabel">小吃</string>
    <string name="count">結果</string>
    <string name="plan">飲食計畫</string>
    <string name="amount">份量</string>
</resources>
