<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_account"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <EditText
        android:id="@+id/loginAccountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/account_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/loginAccountTextView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/loginPasswdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_passwd"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/loginAccountEditText"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <EditText
        android:id="@+id/loginPasswdEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswdTextView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswdEditText"/>


</androidx.constraintlayout.widget.ConstraintLayout>