<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ShowResultActivity.ShowResultActivity">

    <TextView
        android:id="@+id/planView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/breakfastView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakfast_label"
        app:layout_constraintTop_toBottomOf="@+id/blankView"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/planShowView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/planView"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/breakfastShowView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/breakfastView"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lunchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch_label"
        app:layout_constraintTop_toBottomOf="@+id/blankView1"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lunchShowView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/lunchView"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/dinnerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner_label"
        app:layout_constraintTop_toBottomOf="@+id/blankView2"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/dinnerShowView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/dinnerView"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/snackView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snack_label"
        app:layout_constraintTop_toBottomOf="@+id/blankView3"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/snackShowView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/snackView"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/blankView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/planShowView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text=""
         />

    <TextView
        android:id="@+id/blankView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/breakfastShowView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text=""
        />

    <TextView
        android:id="@+id/blankView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lunchShowView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text=""
        />

    <TextView
    android:id="@+id/blankView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/dinnerShowView"
    app:layout_constraintLeft_toLeftOf="parent"
    android:text=""
    />
</androidx.constraintlayout.widget.ConstraintLayout>